# mdfwob

./: .gitignore  Cargo.toml  README.md  build.rs  contracts.example.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
crates/mdfwob/: Cargo.toml
crates/mdfwob-core/: Cargo.toml
crates/mdfwob-core/src/: lib.rs
crates/mdfwob-core/src/analysis/: calc.rs  config.rs  inspect.rs  interval.rs  ls.rs  mod.rs  output.rs  read.rs  resample.rs  stat.rs  summary.rs
crates/mdfwob/src/: cli.rs  config.rs  downloader.rs  lib.rs  main.rs  storage.rs
crates/mdfwob/src/providers/: ibkr.rs
crates/mdfwob/tests/: analysis_e2e.rs
scripts/: release.ps1
src/: cli.rs  config.rs  downloader.rs  fwob_options.rs  lib.rs  main.rs  storage.rs  tick.rs
src/analysis/: calc.rs  config.rs  mod.rs  mod.rs.tmp.31364.9530e703165c  model.rs  output.rs  plot.rs  read.rs  resample.rs  schema.rs  session.rs  stat.rs
src/providers/: databento.rs  ibkr.rs  mod.rs
tests/: analysis_e2e.rs
