[package]
name = "mdfwob"
version = "1.0.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/stcmz/mdfwob"
homepage = "https://github.com/stcmz/mdfwob"
readme = "README.md"
description = "Download historical market data from IBKR and Databento into FWOB files"
keywords = ["market-data", "ibkr", "databento", "finance", "fwob"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.5"
databento = "0.53.0"
fs2 = "0.4"
fwob = "1"
fwob-core = "1"
fwob-v1 = "1"
fwob-v2 = "1"
ibapi = { version = "3.0.1", default-features = false, features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
