[package]
name = "mdfwob"
version = "1.1.6"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/stcmz/mdfwob"
homepage = "https://github.com/stcmz/mdfwob"
readme = "README.md"
description = "Download historical market data from IBKR and Databento into FWOB files"
keywords = ["market-data", "ibkr", "databento", "finance", "fwob"]
categories = ["command-line-utilities"]

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.5"
databento = "0.53.0"
fs2 = "0.4"
fwob = "1.9"
fwob-core = "1.9"
fwob-v1 = "1.9"
fwob-v2 = "1.9"
ibapi = { version = "3.1.0", default-features = false, features = ["sync"] }
jiff = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Cap below time 0.3.50, which fails to compile (unresolved `time_macros::timestamp`).
# This keeps `cargo install mdfwob` working without `--locked`. Lift the cap once a
# fixed time release (>= 0.3.51) is available.
time = { version = ">=0.3, <0.3.50", features = ["formatting", "macros", "parsing"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
