[package]
name = "mdfwob-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Market-data analysis engine (resampling, indicators, plotting) for the mdfwob toolchain"
keywords = ["market-data", "finance", "fwob", "analysis", "indicators"]
categories = ["finance"]

[dependencies]
anyhow = "1.0"
font8x8 = { version = "0.3", default-features = false }
fwob = "1.14"
fwob-core = "1.14"
fwob-v2 = "1.14"
jiff = "0.2"
png = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
